2012-02-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkrelpath.c (argp_parser): Remove unused variable.

2012-02-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkpasswd-pbkdf2.c (argp_parser): Remove unused variable.
	(main): Likewise. Use xmalloc. Respect format security.

2012-02-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mklayout.c (console_grub_equivalence): Make "layout"
	a const char *.
	(argp_parser): Remove unused variable.

2012-02-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkfont.c (grub_font_info): Make name a const char *.
	(add_pixel): Make static.
	(add_font): Likewise.
	(write_string_section): Make name and str a const char *.
	(write_be16_section): Make name a const char *.
	(print_glyphs): Make static.
	(write_font_ascii_bitmap): Likewise.
	(write_font_width_spec): Likewise.
	(write_font_pf2): Likewise.
	(argp_parser): Remove unused variable.
	Respect format security.
	(main): Avoid shadowing. Respect format security.

2012-02-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-editenv.c (argp_parser): Make static.
	(create_envblk_file): Use xmalloc.
	(open_envblk_file): Likewise.
	Resepect format security.
	(set_variables): Respect format security.

2012-02-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/getroot.c (grub_find_device): Respect format security.
	(get_mdadm_uuid): Remove unused variable.
	(grub_util_pull_device): Dont call gettext on already translated
	grub_errmsg.
	(find_system_device): Remove unused variable.
	(grub_util_get_grub_dev): Likewise.
	(grub_make_system_path_relative_to_its_root): Respect format security.

2012-02-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-fstest.c (execute_command): Make first argument
	a const char *.
	(read_file): Avoid shadowing.
	Reuse underlying error message if device open fails.
	(cmd_cmp): Respect format security.
	(root): Make const char *.
	(fstest): Remove args argument and use global copy.